Rewrite simple search engine to use GFile and breadth order

https://bugzilla.gnome.org/show_bug.cgi?id=746916